ui/scss/component/_comments.scss
/* ... */
.comment__thumbnail-wrapper {
  display: grid;
  justify-items: stretch;
  grid-template-rows: auto 1fr;
  grid-gap: 1rem;
}

.comment__content {
  display: flex;
  flex-direction: column;
  width: 100%;
  overflow: hidden;

  &:hover {
    .ff-canvas {
      opacity: 0 !important;
      transition: opacity 1s !important;
    }
    .ff-image {
      opacity: 1 !important;
    }
  }
}

.comment__replies-container {
  margin: 0;
  overflow-x: hidden;
}

.comment__replies {
  margin-top: var(--spacing-m);
  list-style-type: none;
  margin-left: var(--spacing-s);
  flex: 1;

  @media (max-width: $breakpoint-small) {
    margin-top: var(--spacing-s);
  }
}

.comment__replies-loading {
  color: var(--color-link);
  align-items: center;
  margin-left: var(--spacing-xs);

  .spinner {
    margin: 0px;

    .rect {
      background-color: var(--color-link) !important;
    }
  }
}

.comment__replies-loading--more {
  align-items: flex-start;
  transform: translate(var(--spacing-xs));

  .spinner {
    margin: 0px;
  }
}

.comment__thread-links {
  font-size: var(--font-xsmall);
  flex-direction: column;
  margin-bottom: var(--spacing-m);

  .button {
    padding: var(--spacing-xxs) 0px;
  }
}

.comment--reply {
  margin: 0;

  &:not(:first-child) {
    margin-top: var(--spacing-m);
  }
}

.comment--top-level {
  &:not(:first-child) {
    margin-top: var(--spacing-l);
  }
}

.comment--slimed {
  opacity: 0.6;
}

.comment__edit-input {
  margin-top: var(--spacing-xxs);
}

.comment__threadline {
  @extend .button--alt;
  height: auto;
  border-left: 1px solid var(--color-comment-threadline);
  background-color: transparent !important;
  border-radius: 0px;
  left: 50%;

  &:hover {
    border-left: 4px solid var(--color-comment-threadline);
    background-color: transparent !important;
    padding-right: calc(var(--spacing-m) - 3px);

    @media (max-width: $breakpoint-small) {
      left: calc(50% - 3px);
    }
  }
}

.comment--highlighted {
  background: var(--color-comment-highlighted);
  box-shadow: 0 0 0 5px var(--color-comment-highlighted);
  border-radius: 2px;
}

.comment__body-container {
  display: flex;
  flex-direction: column;
  min-width: 0;
  flex: 1;
  margin-left: var(--spacing-xs);

  @media (min-width: $breakpoint-small) {
    margin-left: var(--spacing-s);
  }

  &:hover {
    .menu__button {
      opacity: 1;
    }
  }

  .menu__button {
    .icon {
      transition: transform 0.2s;
    }
  }

  [aria-expanded='true'].menu__button {
    opacity: 1;
    // background: var(--color-header-background);
    background-color: rgba(var(--color-header-button-base), 0.9);
    // border-radius: var(--border-radius);
    border-radius: 50%;
    outline: 2px solid var(--color-header-background);
    .icon {
      stroke: var(--color-primary);
      transform: rotate(-90deg);
    }
  }
}

.comment__dead {
  display: flex;
  align-items: center;

  .icon {
    margin-left: var(--spacing-s);
  }
}

.comment__meta {
  display: flex;
  justify-content: space-between;
}

.comment__meta-information {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  height: 100%;
  width: calc(100% - var(--spacing-m) - var(--spacing-s));

  .channel-name {
    color: var(--color-link);

    &:hover {
      color: rgba(var(--color-secondary-dynamic), 1);
    }
  }

  .comment__badge svg {
    height: 1.4rem;
    width: 1.4rem;
  }
}

.comment__pin {
  display: inline-block;
  margin: 0 var(--spacing-s);
  margin-right: 0;
  font-size: var(--font-xsmall);

  .icon {
    padding-top: 1px;
  }

  @media (max-width: $breakpoint-small) {
    width: 90%;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
  }
}

.comment__message {
  word-break: break-word;
  padding-right: var(--spacing-xl);
  color: var(--color-text);

  ul li {
    list-style-type: disc;

    ul li {
      list-style-type: circle;
    }
  }

  p {
    & + p {
      margin-top: var(--spacing-xxs);
    }
  }

  @media (max-width: $breakpoint-small) {
    padding-right: var(--spacing-l);
  }
}

.comment__author {
  margin-right: var(--spacing-xs);
  height: 100%;

  .button__content {
    max-width: 10rem;
    overflow: hidden;
    text-overflow: ellipsis;
  }
}

.comment__author--creator {
  padding: 0 3px;
  height: 18px;
  margin-top: var(--spacing-s);
  background-color: var(--color-primary);
  border-radius: var(--border-radius);
  color: var(--color-primary-contrast) !important;

  .button__content {
    color: var(--color-primary-contrast);
  }
  .channel-name {
    color: var(--color-primary-contrast);
  }

  &.button--uri-indicator {
    color: var(--color-primary-contrast);
  }
  &:hover {
    color: var(--color-primary-contrast) !important;
  }
}

.comment__time {
  @extend .button--uri-indicator;
  opacity: 0.6;
  white-space: nowrap;
  height: 100%;
  margin-right: var(--spacing-xs);

  &:focus {
    @include linkFocus;
  }
}

.comment__menu {
  align-self: flex-end;
  line-height: 1;

  @media (max-width: $breakpoint-small) {
    .menu__button {
      opacity: 1;
    }
  }
}

.comment__char-count {
  font-size: var(--font-xsmall);
  color: var(--color-text);
}

.comment__char-count-mde {
  align-self: flex-end;
  font-size: var(--font-xsmall);
  padding-right: var(--spacing-xs); // Align with SimpleMDE's status bar
  padding-bottom: 0;
}

.comment__menu-option {
  display: flex;
  align-items: center;
  padding: var(--spacing-xs) var(--spacing-s) var(--spacing-xs) var(--spacing-s);
  font-size: var(--font-xsmall);

  .menu__link {
    padding: 0;
    color: var(--color-text);
  }

  .comment__menu-help {
    color: var(--color-text);
    .icon--ExternalLink {
      margin-top: unset;
    }
  }

  .icon--ExternalLink {
    margin-left: 0 !important;
  }

  &:hover {
    .comment__menu-help {
      color: var(--color-primary-contrast);
    }
  }
}

.comment__menu-list {
  box-shadow: var(--card-box-shadow);
  border-radius: var(--card-radius);
  padding: var(--spacing-s);
}
/* ... */

